<resources>
    <string name="app_name">PUMKM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">PUMKM</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_barang">Barang</string>
    <string name="menu_tambah_barang">Tambah Barang</string>
    <string name="menu_keranjang">Keranjang</string>
    <string name="menu_penjualan">Penjualan</string>
    <string name="menu_profil">Profil</string>
    <string name="menu_logout">Logout</string>

    <string name="btn_simpan">Simpan</string>
    <string name="btn_batal">Batal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>