<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_barang"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_barang" />
        <item
            android:id="@+id/nav_keranjang"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_keranjang" />
        <item
            android:id="@+id/nav_penjualan"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_penjualan" />
        <item
            android:id="@+id/nav_profil"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_profil" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_logout" />
    </group>
</menu>